# advent-of-code

./: .gitignore  Cargo.toml  README.md  fetch.nu  justfile  out.txt  output.txt  solve.js  try.ts
advent_utils/: Cargo.toml  README.md
advent_utils/src/: array_2d.rs  binary_search.rs  bitfield.rs  disjoint_set.rs  doubly_linked_list.rs  fixed_slice_vec.rs  genetic.rs  grid.rs  immutable_lists.rs  lib.rs  math.rs  parse.rs  svg.rs
advent_utils/src/algo/: collect_digits.rs  get_top.rs  heapify.rs  merge_inclusive_ranges.rs  mod.rs
advent_utils/src/math/: area.rs  per_non_diagonal.rs  rat.rs  rat_vec2.rs  rat_vec3.rs  systems.rs  turn.rs
benches/y15/: y15d01.rs  y15d02.rs  y15d03.rs  y15d04.rs
benches/y22/: y22d10.rs  y22d11.rs  y22d12.rs  y22d13.rs  y22d14.rs  y22d15.rs  y22d16.rs  y22d17.rs  y22d18.rs  y22d19.rs  y22d3.rs  y22d4.rs  y22d5.rs  y22d6.rs  y22d7.rs  y22d8.rs  y22d9.rs
benches/y23/: y23d01.rs  y23d02.rs  y23d03.rs  y23d04.rs  y23d05.rs  y23d06.rs  y23d07.rs  y23d08.rs  y23d09.rs  y23d10.rs  y23d11.rs  y23d12.rs  y23d13.rs  y23d14.rs  y23d15.rs  y23d16.rs  y23d17.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_ascii.rs
scripts/: add-member.ts
src/: lib.rs
src/day1/: part1.rs  part2.rs
src/y15/: mod.rs  y15d01.rs  y15d02.rs  y15d03.rs  y15d04.rs
src/y20/: mod.rs  y20d01.rs  y20d02.rs
src/y22/: day1.rs  day3.rs  mod.rs  reduces.rs  y22d02.rs  y22d04.rs  y22d05.rs  y22d06.rs  y22d07.rs  y22d08.rs  y22d09.rs  y22d10.rs  y22d12.rs  y22d13.rs  y22d14.rs  y22d15.rs  y22d19.rs
src/y23/: mod.rs  y23d01.rs  y23d02.rs  y23d03.rs  y23d04.rs  y23d05.rs  y23d06.rs  y23d07.rs  y23d08.rs  y23d09.rs  y23d10.rs  y23d11.rs  y23d12.rs  y23d13.rs  y23d14.rs  y23d15.rs  y23d16.rs  y23d17.rs
template/: cargo-generate.toml
y15/d01/: Cargo.toml  README.md
y15/d02/: Cargo.toml  README.md
y15/d03/: Cargo.toml  README.md
y15/d04/: Cargo.toml  README.md
y15/d04/benches/: y15d04.rs
y15/d04/src/: lib.rs  main.rs
y15/d05/: Cargo.toml  README.md
y15/d06/: Cargo.toml  README.md
y15/d06/benches/: y15d06.rs
y15/d06/src/: lib.rs  main.rs
y15/d07/: Cargo.toml  README.md
y15/d07/benches/: y15d07.rs
y15/d07/src/: lib.rs  main.rs
y15/d08/: Cargo.toml  README.md
y15/d08/benches/: y15d08.rs
y15/d08/src/: lib.rs  main.rs
y15/d09/: Cargo.toml  README.md
y15/d09/benches/: y15d09.rs
y15/d09/src/: lib.rs  main.rs
y15/d10/: Cargo.toml  README.md
y15/d11/: Cargo.toml  README.md
y15/d11/benches/: y15d11.rs
y15/d11/src/: lib.rs  main.rs
y15/d13/: Cargo.toml  README.md
y15/d14/: Cargo.toml  README.md
y15/d14/benches/: y15d14.rs
y15/d14/src/: lib.rs  main.rs
y15/d15/: Cargo.toml  README.md
y15/d15/benches/: y15d15.rs
y15/d15/src/: lib.rs  main.rs
y15/d16/: Cargo.toml  README.md
y15/d16/benches/: y15d16.rs
y15/d16/src/: lib.rs  main.rs
y15/d17/: Cargo.toml  README.md
y15/d18/: Cargo.toml  README.md
y15/d19/: Cargo.toml  README.md
y15/d19/benches/: y15d19.rs
y15/d19/src/: lib.rs  main.rs  trie.rs
y15/d20/: Cargo.toml  README.md
y15/d21/: Cargo.toml  README.md
y15/d21/benches/: y15d21.rs
y15/d21/src/: lib.rs  main.rs
y15/d22/: Cargo.toml  README.md
y15/d22/benches/: y15d22.rs
y15/d22/src/: lib.rs  main.rs
y15/d23/: Cargo.toml  README.md
y15/d24/: Cargo.toml  README.md
y15/d25/: Cargo.toml  README.md  example.txt
y16/d07/: Cargo.toml  README.md
y16/d08/: Cargo.toml  README.md
y16/d08/benches/: y16d08.rs
y16/d08/src/: lib.rs  main.rs
y16/d09/: Cargo.toml  README.md
y16/d09/benches/: y16d09.rs
y16/d09/src/: lib.rs  main.rs
y16/d10/: Cargo.toml  README.md  benches.txt
y16/d10/benches/: y16d10.rs
y16/d10/src/: lib.rs  main.rs
y16/d11/: Cargo.toml  README.md
y16/d11/benches/: y16d11.rs
y16/d11/src/: lib.rs  main.rs
y16/d12/: Cargo.toml  README.md
y16/d12/benches/: y16d12.rs
y16/d12/src/: lib.rs  main.rs
y16/d13/: Cargo.toml  README.md
y16/d13/benches/: y16d13.rs
y16/d13/src/: lib.rs  main.rs
y16/d14/: Cargo.toml  README.md
y16/d14/benches/: y16d14.rs
y16/d14/src/: lib.rs  main.rs
y16/d15/: Cargo.toml  README.md
y16/d16/: Cargo.toml  README.md  benches.txt
y16/d16/benches/: y16d16.rs
y16/d16/src/: day16.rs  lib.rs  main.rs
y16/d17/: Cargo.toml  README.md
y16/d17/benches/: y16d17.rs
y16/d17/src/: day17.rs  lib.rs  main.rs
y16/d18/: Cargo.toml  README.md
y16/d19/: Cargo.toml  README.md
y16/d19/benches/: y16d19.rs
y16/d19/src/: day19.rs  lib.rs  main.rs
y16/d20/: Cargo.toml  README.md  example.txt
y16/d21/: Cargo.toml  README.md
y16/d21/benches/: y16d21.rs
y16/d21/src/: day21.rs  main.rs
y16/d22/: Cargo.toml  README.md
y16/d23/: Cargo.toml  README.md
y16/d24/: Cargo.toml  README.md
y16/d25/: Cargo.toml  README.md
y17/d01/: Cargo.toml  README.md
y17/d01/benches/: y17d01.rs
y17/d01/src/: day01.rs  main.rs
y17/d02/: Cargo.toml  README.md
y17/d03/: Cargo.toml  README.md
y17/d04/: Cargo.toml  README.md
y17/d04/benches/: y17d04.rs
y17/d04/src/: day04.rs  lib.rs  main.rs
y17/d05/: Cargo.toml  README.md
y17/d06/: Cargo.toml  README.md  benches.txt
y17/d07/: Cargo.toml  README.md
y18/d01/: Cargo.toml  README.md
y19/d06/: Cargo.toml  README.md
y19/d06/benches/: y19d06.rs
y19/d06/src/: lib.rs  main.rs
y20/d01/: Cargo.toml  README.md
y20/d02/: Cargo.toml  README.md
y22/d01/: Cargo.toml  README.md
y22/d02/: Cargo.toml  README.md
y22/d03/: Cargo.toml  README.md
y22/d04/: Cargo.toml  README.md
y22/d05/: Cargo.toml  README.md
y22/d06/: Cargo.toml  README.md
y22/d06/benches/: y22d06.rs
y22/d06/src/: lib.rs  main.rs
y22/d07/: Cargo.toml  README.md
y22/d08/: Cargo.toml  README.md
y22/d09/: Cargo.toml  README.md
y22/d10/: Cargo.toml  README.md
y22/d11/: Cargo.toml  README.md
y22/d12/: Cargo.toml  README.md
y22/d13/: Cargo.toml  README.md
y22/d14/: Cargo.toml  README.md
y22/d15/: Cargo.toml  README.md
y22/d16/: Cargo.toml  README.md
y22/d17/: Cargo.toml  README.md
y22/d18/: Cargo.toml  README.md
y22/d19/: Cargo.toml  README.md
y22/d20/: Cargo.toml  README.md
y23/d20/: part2.md  (+2 more)
(+584 files in other folders)
