[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "advent_utils",
    "y15/d05",
    "y15/d06",
    "y15/d07",
    "y15/d08",
    "y15/d09",
    "y15/d10",
    "y15/d11",
    "y15/d13",
    "y15/d14",
    "y15/d15",
    "y15/d16",
    "y15/d17",
    "y15/d18",
    "y15/d19",
    "y15/d20",
    "y15/d21",
    "y15/d22",
    "y18/d01",
    "y19/d06",
    "y22/d19",
    "y23/d01",
    "y23/d02",
    "y23/d03",
    "y23/d04",
    "y23/d05",
    "y23/d06",
    "y23/d07",
    "y23/d08",
    "y23/d09",
    "y23/d10",
    "y23/d11",
    "y23/d12",
    "y23/d13",
    "y23/d14",
    "y23/d15",
    "y23/d16",
    "y23/d17",
    "y23/d18",
    "y23/d19",
    "y23/d20",
    "y23/d21",
    "y23/d22",
    "y23/d23",
    "y23/d24",
    "y23/d25",
    "y24/d01",
    "y24/d02",
    "y24/d03",
    "y24/d04",
    "y24/d05",
    "y24/d06",
    "y24/d07",
    "y24/d08",
    "y24/d09",
    "y24/d10",
]

[workspace.dependencies]
advent_utils = { path = "./advent_utils" }
criterion = "0.5.1"
glam = "0.25.0"
itertools = "0.13.0"
md-5 = "0.10.5"
nom = "7.1.3"
rayon = "1.6.1"
regex = "1.11.1"
rstest = "0.23.0"
smallvec = "1.13.2"
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
md-5 = { workspace = true }

[[bench]]
name = "y22d4"
path = "benches/y22/y22d4.rs"
harness = false

[[bench]]
name = "y22d5"
path = "benches/y22/y22d5.rs"
harness = false

[[bench]]
name = "y22d6"
path = "benches/y22/y22d6.rs"
harness = false

[[bench]]
name = "y22d7"
path = "benches/y22/y22d7.rs"
harness = false

[[bench]]
name = "y22d8"
path = "benches/y22/y22d8.rs"
harness = false

[[bench]]
name = "y22d9"
path = "benches/y22/y22d9.rs"
harness = false

[[bench]]
name = "y22d10"
path = "benches/y22/y22d10.rs"
harness = false

[[bench]]
name = "y22d11"
path = "benches/y22/y22d11.rs"
harness = false

[[bench]]
name = "y22d12"
path = "benches/y22/y22d12.rs"
harness = false


[[bench]]
name = "y22d13"
path = "benches/y22/y22d13.rs"
harness = false

[[bench]]
name = "y15d01"
path = "benches/y15/y15d01.rs"
harness = false

[[bench]]
name = "y15d02"
path = "benches/y15/y15d02.rs"
harness = false

[[bench]]
name = "y15d03"
path = "benches/y15/y15d03.rs"
harness = false

[[bench]]
name = "y15d04"
path = "benches/y15/y15d04.rs"
harness = false


[[bench]]
name = "y22d14"
path = "benches/y22/y22d14.rs"
harness = false

[[bench]]
name = "y22d15"
path = "benches/y22/y22d15.rs"
harness = false

[[bench]]
name = "y22d16"
path = "benches/y22/y22d16.rs"
harness = false

[[bench]]
name = "y22d17"
path = "benches/y22/y22d17.rs"
harness = false

[[bench]]
name = "y22d18"
path = "benches/y22/y22d18.rs"
harness = false

[[bench]]
name = "y23d01"
path = "benches/y23/y23d01.rs"
harness = false

[[bench]]
name = "y23d02"
path = "benches/y23/y23d02.rs"
harness = false

[[bench]]
name = "y23d03"
path = "benches/y23/y23d03.rs"
harness = false


[[bench]]
name = "y23d04"
path = "benches/y23/y23d04.rs"
harness = false

[[bench]]
name = "y23d05"
path = "benches/y23/y23d05.rs"
harness = false


[[bench]]
name = "y23d06"
path = "benches/y23/y23d06.rs"
harness = false

[[bench]]
name = "y23d07"
path = "benches/y23/y23d07.rs"
harness = false

[[bench]]
name = "y24d01"
path = "benches/y24/y24d01.rs"
harness = false

[[bench]]
name = "y22d19"
path = "benches/y22/y22d19.rs"
harness = false


[[bench]]
name = "y23d08"
path = "benches/y23/y23d08.rs"
harness = false

[[bench]]
name = "y23d09"
path = "benches/y23/y23d09.rs"
harness = false


[[bench]]
name = "y23d10"
path = "benches/y23/y23d10.rs"
harness = false

[[bench]]
name = "y23d11"
path = "benches/y23/y23d11.rs"
harness = false

[[bench]]
name = "y23d12"
path = "benches/y23/y23d12.rs"
harness = false

[[bench]]
name = "y23d13"
path = "benches/y23/y23d13.rs"
harness = false

[[bench]]
name = "y23d14"
path = "benches/y23/y23d14.rs"
harness = false

[[bench]]
name = "y23d15"
path = "benches/y23/y23d15.rs"
harness = false

[[bench]]
name = "y23d16"
path = "benches/y23/y23d16.rs"
harness = false
