[workspace]
resolver = "2"
members = [
    "advent_utils",
    "fuzz",
    "y15/d01",
    "y15/d02",
    "y15/d03",
    "y15/d04",
    "y15/d05",
    "y15/d06",
    "y15/d07",
    "y15/d08",
    "y15/d09",
    "y15/d10",
    "y15/d11",
    "y15/d13",
    "y15/d14",
    "y15/d15",
    "y15/d16",
    "y15/d17",
    "y15/d18",
    "y15/d19",
    "y15/d20",
    "y15/d21",
    "y15/d22",
    "y15/d23",
    "y15/d24",
    "y15/d25",
    "y16/d07",
    "y16/d08",
    "y16/d09",
    "y16/d10",
    "y16/d11",
    "y16/d12",
    "y16/d13",
    "y18/d01",
    "y19/d06",
    "y20/d01",
    "y20/d02",
    "y22/d01",
    "y22/d02",
    "y22/d03",
    "y22/d04",
    "y22/d05",
    "y22/d06",
    "y22/d07",
    "y22/d08",
    "y22/d09",
    "y22/d10",
    "y22/d11",
    "y22/d12",
    "y22/d13",
    "y22/d14",
    "y22/d15",
    "y22/d16",
    "y22/d17",
    "y22/d18",
    "y22/d19",
    "y23/d01",
    "y23/d02",
    "y23/d03",
    "y23/d04",
    "y23/d05",
    "y23/d06",
    "y23/d07",
    "y23/d08",
    "y23/d09",
    "y23/d10",
    "y23/d11",
    "y23/d12",
    "y23/d13",
    "y23/d14",
    "y23/d15",
    "y23/d16",
    "y23/d17",
    "y23/d18",
    "y23/d19",
    "y23/d20",
    "y23/d21",
    "y23/d22",
    "y23/d23",
    "y23/d24",
    "y23/d25",
    "y24/d01",
    "y24/d02",
    "y24/d03",
    "y24/d04",
    "y24/d05",
    "y24/d06",
    "y24/d07",
    "y24/d08",
    "y24/d09",
    "y24/d10",
    "y24/d11",
    "y24/d12",
    "y24/d13",
    "y24/d14",
    "y24/d15",
    "y24/d16",
    "y24/d17",
    "y24/d18",
    "y24/d19",
    "y24/d20",
]

[workspace.dependencies]
advent_utils = { path = "./advent_utils" }
divan = "0.1.17"
glam = "0.25.0"
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.6.1"
regex = "1.11.1"
rstest = "0.23.0"
smallvec = "1.13.2"
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"

[profile.ci]
inherits = "test"
debug = false
