[package]
name = "advent_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
nom = { workspace = true }
thiserror = "2.0.6"
fixed-slice-vec = "0.10.0"
array-init = "2.1.0"
derive_more = { version = "1.0.0", features = ["from"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rstest.workspace = true

[dev-dependencies]
rstest.workspace = true
mockalloc = "0.1.2"
