[package]
name = "y15d04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10.5"
advent_utils.workspace = true
criterion.workspace = true
itertools.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true


[[bench]]
name = "y15d04"
path = "benches/y15d04.rs"
harness = false
