[package]
name = "y15d08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
criterion.workspace = true


[[bench]]
name = "y15d08"
path = "benches/y15d08.rs"
harness = false
