[package]
name = "y15d09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
criterion = "0.5.1"


[[bench]]
name = "y15d09"
path = "benches/y15d09.rs"
harness = false
