[package]
name = "y15d11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
criterion.workspace = true


[[bench]]
name = "y15d11"
path = "benches/y15d11.rs"
harness = false
