[package]
name = "y15d15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
criterion.workspace = true
nom.workspace = true


[[bench]]
name = "y15d15"
path = "benches/y15d15.rs"
harness = false
