[package]
name = "y15d16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
criterion = "0.5.1"
nom.workspace = true


[[bench]]
name = "y15d16"
path = "benches/y15d16.rs"
harness = false
