[package]
name = "y15d19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
criterion.workspace = true
edit-distance = "2.1.3"


[[bench]]
name = "y15d19"
path = "benches/y15d19.rs"
harness = false
