[package]
name = "y16d08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_utils.workspace = true
criterion.workspace = true
itertools.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true


[[bench]]
name = "y16d08"
path = "benches/y16d08.rs"
harness = false
