[package]
name = "y16d13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_utils.workspace = true
itertools.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
pathfinding = "4.12.0"

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "y16d13"
path = "benches/y16d13.rs"
harness = false
