[package]
name = "y16d16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_utils.workspace = true
itertools.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
rstest.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "y16d16"
path = "benches/y16d16.rs"
harness = false
