[package]
name = "y16d17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_utils.workspace = true
itertools.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
rstest.workspace = true
md5 = "0.7.0"
pathfinding = "4.12.0"

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "y16d17"
path = "benches/y16d17.rs"
harness = false
