[package]
name = "y16d19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_utils.workspace = true
itertools.workspace = true
rstest.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "y16d19"
path = "benches/y16d19.rs"
harness = false
