[package]
name = "y19d06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_utils.workspace = true
criterion.workspace = true
itertools.workspace = true
petgraph = "0.6.5"
nom.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true


[[bench]]
name = "y19d06"
path = "benches/y19d06.rs"
harness = false
